# local-lakehouse

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.claude/commands/: test.md
api/: config.py  main.py  requirements.txt
api/engines/: duckdb_engine.py  trino_engine.py
api/routers/: metadata.py  query.py
bento/: bento.yaml
clickhouse/init/: 01-create-tables.sql
duckdb/: query.py
flink/: Dockerfile
flink/conf/: config.yaml
flink/sql/: web-logs-to-clickhouse.sql  web-logs-to-iceberg.sql
producer/: config.py  generator.py  main.py
pyiceberg-writer/: main.py  requirements.txt
scripts/: smoke-test-all.sh  smoke-test-api.sh  smoke-test-bento.sh  smoke-test-clickhouse.sh  smoke-test-duckdb.sh  smoke-test-flink.sh  smoke-test-kafka.sh  smoke-test-minio.sh  smoke-test-nessie.sh  smoke-test-trino.sh  smoke-test-ui.sh  submit-clickhouse-job.sh  submit-flink-job.sh  verify-producer.sh
tests/: conftest.py
tests/integration/: test_kafka_roundtrip.py
tests/unit/: test_config.py  test_generator.py
trino/catalog/: clickhouse.properties  iceberg.properties
ui/: Dockerfile  app.js  index.html  nginx.conf  style.css
